--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT='3000'
-MONGOLAB_URI='mongodb+srv://saimoulidB:Sai1234@cluster0.vpaup7t.mongodb.net/UrlMapping?retryWrites=true&w=majority'
+MONGO_URL='mongodb+srv://saimoulidB:Sai1234@cluster0.vpaup7t.mongodb.net/mongodB-learning?retryWrites=true&w=majority'
