--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.12.4",
     "mongodb": "^3.0.0",
-    "mongoose": "^5.11.15",
-    "save": "^2.5.0"
+    "mongoose": "^6.5.2",
+    "mongoose-sequence": "^4.0.1",
+    "save": "^2.5.0",
+    "url-exists-deep": "^2.1.3"
   },
   "license": "MIT",
   "devDependencies": {
