--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "cors": "^2.8.1",
     "dotenv": "^8.2.0",
     "express": "^4.12.4",
+    "is-valid-hostname": "^1.0.2",
     "mongodb": "^3.0.0",
     "mongoose": "^6.5.2",
     "mongoose-sequence": "^4.0.1",
     "save": "^2.5.0",
-    "url-exists-deep": "^2.1.3"
+    "url-exists-deep": "^2.1.3",
+    "valid-url": "^1.0.9"
   },
   "license": "MIT",
   "devDependencies": {
